@@ -3,6 +3,14 @@ X3 ChangeLog
 
 2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
 
+	* src/mod-python.c: add emb_svsquit function.
+
+	* src/proto.h: observe proper const-ness in irc_svsquit function.
+	
+	* src/proto-p10.c: observe proper const-ness in irc_svsquit function.
+
+2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
+
 	* src/mod-python.c: add emb_svsnick function.
 
 2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
